--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 requests==2.5.1
 six==1.9.0
 python-dateutil==2.4.0
-pyjwkest==1.0.3
+git+git://github.com/astagi/pyjwkest@63d5cb0597c77c1a2ec30c28bd0e478d9a11f131
