--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ python:
   - 2.6
 
 install:
-  - pip install -r requirements-test.txt
+  - travis_retry pip install -r requirements-test.txt
 
 before_script:
   - flake8 taiga
