--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: python
 
-sudo: false
+sudo: required
+dist: trusty
 
 python:
   - 3.5
@@ -18,3 +19,22 @@ before_script:
 script: nosetests --with-coverage --cover-package=taiga
 
 after_success: codecov
+
+jobs:
+  include:
+    - stage: package
+      install:
+        - sudo apt-get install -yq --no-install-suggests --no-install-recommends
+          devscripts fakeroot equivs
+        - mk-build-deps -i -s sudo -t 'apt-get -yq' debian/control
+        - echo 'APT::Default-Release "trusty";' | sudo tee /etc/apt/apt.conf
+        - echo 'deb http://archive.ubuntu.com/ubuntu xenial main' |
+          sudo tee /etc/apt/sources.list.d/xenial.list
+        - sudo apt-get update
+        - sudo apt-get install -yq --no-install-suggests --no-install-recommends
+          -t xenial
+          python-dateutil python-requests python-six
+          python3-dateutil python3-requests python3-six
+      script: make deb
+      before_script: skip
+      after_success: skip
