--- a/.travis.yml
+++ b/.travis.yml
@@ -4,25 +4,70 @@ sudo: required
 dist: trusty
 
 python:
+  - 3.6
   - 3.5
   - 3.4
-  - 3.3
   - 2.7
-  - 2.6
+
+after_success:
+  - codecov
+  - coveralls
+
+cache:
+  pip: true
+  directories:
+    - .tox
+
+env:
+  matrix:
+  - TOXENV='pep8'
+  - TOXENV='isort'
+  - TOXENV='docs'
+  - TESTS='run'
 
 install:
   - travis_retry pip install -r requirements-test.txt
+  - "if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then export PYVER=py27; fi"
+  - "if [[ $TRAVIS_PYTHON_VERSION == '3.4' ]]; then export PYVER=py34; fi"
+  - "if [[ $TRAVIS_PYTHON_VERSION == '3.5' ]]; then export PYVER=py35; fi"
+  - "if [[ $TRAVIS_PYTHON_VERSION == '3.6' ]]; then export PYVER=py36; fi"
+  - "if [[ ${TESTS}z != 'z' ]]; then export TOXENV=$PYVER; fi"
 
-before_script:
-  - flake8 taiga
+# command to run tests, e.g. python setup.py test
+script: COMMAND='coverage run' tox -e$TOXENV
 
-script: nosetests --with-coverage --cover-package=taiga
+matrix:
+  exclude:
+  - python: 2.7
+    env: TOXENV='pep8'
+  - python: 2.7
+    env: TOXENV='isort'
+  - python: 2.7
+    env: TOXENV='docs'
+  - python: 3.4
+    env: TOXENV='pep8'
+  - python: 3.4
+    env: TOXENV='isort'
+  - python: 3.4
+    env: TOXENV='docs'
+  - python: 3.5
+    env: TOXENV='pep8'
+  - python: 3.5
+    env: TOXENV='isort'
+  - python: 3.5
+    env: TOXENV='docs'
 
-after_success: codecov
+  allow_failures:
+  - python: 3.6
+    env: TOXENV='pep8'
+  - python: 3.6
+    env: TOXENV='isort'
 
 jobs:
   include:
     - stage: package
+      env:
+        PACKAGE=1
       install:
         - sudo apt-get install -yq --no-install-suggests --no-install-recommends
           devscripts fakeroot equivs
