--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,7 +1,8 @@
 -r requirements.txt
-mock==1.0.1
-coverage==3.7.1
+coverage
+coveralls
 codecov
-nose
-flake8==2.3.0
-pyflakes==0.8.1
+mock
+flake8
+tox
+wheel
