--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,20 @@
 [flake8]
+exclude = *.egg-info,.git,.settings,.tox,build,dist,docs,requirements,tmp,data
+max-line-length = 99
 ignore = E402
+
+[metadata]
+license-file = LICENSE
+
+[wheel]
+universal = 1
+
+[isort]
+line_length = 99
+skip = data, .tox
+combine_as_imports = true
+default_section = THIRDPARTY
+include_trailing_comma = true
+known_first_party = taiga
+multi_line_output = 5
+not_skip = __init__.py
