--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,29 @@
 [tox]
-envlist = py26,py27,py33,py34,35,36
+envlist = pep8,isort,docs,py{36,35,34,27}
+skip_missing_interpreters=True
 
 [testenv]
-deps = -rrequirements-test.txt
-commands=nosetests
+deps =
+    -rrequirements-test.txt
+    py34: pyjwkest>=1.0,<1.3.6
+commands=coverage run setup.py test
+
+[testenv:pep8]
+deps = flake8
+commands = flake8
+skip_install = true
+
+[testenv:isort]
+deps = isort
+commands = isort -c -rc -df
+skip_install = true
+
+[testenv:docs]
+deps =
+    sphinx
+    sphinx-rtd-theme
+    -rrequirements-docs.txt
+changedir=docs
+skip_install = true
+commands=
+    sphinx-build -W -b html -d {envtmpdir}/doctrees .  {toxinidir}/docs/_build/html
