--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [flake8]
-exclude = *.egg-info,.git,.settings,.tox,build,dist,docs,requirements,tmp,data
+exclude = *.egg-info,.git,.settings,.tox,build,dist,docs,requirements,tmp,data,demo.py,debian
 max-line-length = 99
 ignore = E402
 
@@ -11,7 +11,7 @@ universal = 1
 
 [isort]
 line_length = 99
-skip = data, .tox
+skip = data, .tox, debian, docs/conf.py
 combine_as_imports = true
 default_section = THIRDPARTY
 include_trailing_comma = true
