--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ sudo: required
 dist: trusty
 
 python:
+  - 3.7
   - 3.6
   - 3.5
   - 3.4
@@ -31,6 +32,7 @@ install:
   - "if [[ $TRAVIS_PYTHON_VERSION == '3.4' ]]; then export PYVER=py34; fi"
   - "if [[ $TRAVIS_PYTHON_VERSION == '3.5' ]]; then export PYVER=py35; fi"
   - "if [[ $TRAVIS_PYTHON_VERSION == '3.6' ]]; then export PYVER=py36; fi"
+  - "if [[ $TRAVIS_PYTHON_VERSION == '3.7' ]]; then export PYVER=py37; fi"
   - "if [[ ${TESTS}z != 'z' ]]; then export TOXENV=$PYVER; fi"
 
 # command to run tests, e.g. python setup.py test
