--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,10 @@
 language: python
-
-sudo: required
-dist: trusty
+dist: xenial
 
 python:
+  - 3.7
   - 3.6
   - 3.5
-  - 3.4
   - 2.7
 
 after_success:
@@ -28,9 +26,9 @@ env:
 install:
   - travis_retry pip install -r requirements-test.txt
   - "if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then export PYVER=py27; fi"
-  - "if [[ $TRAVIS_PYTHON_VERSION == '3.4' ]]; then export PYVER=py34; fi"
   - "if [[ $TRAVIS_PYTHON_VERSION == '3.5' ]]; then export PYVER=py35; fi"
   - "if [[ $TRAVIS_PYTHON_VERSION == '3.6' ]]; then export PYVER=py36; fi"
+  - "if [[ $TRAVIS_PYTHON_VERSION == '3.7' ]]; then export PYVER=py37; fi"
   - "if [[ ${TESTS}z != 'z' ]]; then export TOXENV=$PYVER; fi"
 
 # command to run tests, e.g. python setup.py test
@@ -44,17 +42,17 @@ matrix:
     env: TOXENV='isort'
   - python: 2.7
     env: TOXENV='docs'
-  - python: 3.4
+  - python: 3.5
     env: TOXENV='pep8'
-  - python: 3.4
+  - python: 3.5
     env: TOXENV='isort'
-  - python: 3.4
+  - python: 3.5
     env: TOXENV='docs'
-  - python: 3.5
+  - python: 3.6
     env: TOXENV='pep8'
-  - python: 3.5
+  - python: 3.6
     env: TOXENV='isort'
-  - python: 3.5
+  - python: 3.6
     env: TOXENV='docs'
 
 jobs:
