--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,7 +38,7 @@ jobs:
           addToPath: false
         name: pyTools
 
-      - script: $(pyTools.pythonLocation)/bin/pip install --upgrade tox
+      - script: $(pyTools.pythonLocation)/bin/pip install --upgrade tox requests
         displayName: Install Python-based tools.
 
       - task: UsePythonVersion@0
