--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,7 +38,7 @@ jobs:
           addToPath: false
         name: pyTools
 
-      - script: $(pyTools.pythonLocation)/bin/pip install --upgrade tox requests
+      - script: $(pyTools.pythonLocation)/bin/pip install --upgrade tox requests codecov
         displayName: Install Python-based tools.
 
       - task: UsePythonVersion@0
@@ -49,3 +49,12 @@ jobs:
 
       - script: $(pyTools.pythonLocation)/bin/tox -e $(tox.env)
         displayName: run tox -e $(tox.env)
+
+      - script: |
+          python -m pip install coverage
+          coverage combine
+          $(pyTools.pythonLocation)/bin/codecov
+        env:
+          CODECOV_TOKEN: $(codecov.token)
+        displayName: Report Coverage
+        condition: succeeded()
