--- a/.coveragerc
+++ b/.coveragerc
@@ -3,7 +3,7 @@ branch = True
 source = taiga
 
 [report]
-omit = *test_utils*
+omit =
 # Regexes for lines to exclude from consideration
 exclude_lines =
     # Have to re-enable the standard pragma
