--- a/tox.ini
+++ b/tox.ini
@@ -1,28 +1,153 @@
 [tox]
-envlist = pep8,isort,docs,py{37,36,35,27}
-skip_missing_interpreters=True
+envlist =
+    black
+    blacken
+    docs
+    isort
+    isort_format
+    pep8
+    pypi-description
+    towncrier
+    py{39,38,37,36}
+skip_missing_interpreters = true
 
 [testenv]
+commands = {env:COMMAND:python} setup.py test {posargs}
 deps =
-    -rrequirements-test.txt
     py34: pyjwkest>=1.0,<1.3.6
-commands=coverage run setup.py test
+    -r{toxinidir}/requirements-test.txt
+passenv =
+    COMMAND
+    PYTEST_*
 
 [testenv:pep8]
-deps = flake8
-commands = flake8
+commands =
+    {envpython} -m flake8
+    {envpython} -minterrogate -c pyproject.toml taiga tests
+deps =
+    interrogate
+    flake8
+    flake8-broken-line
+    flake8-bugbear
+    flake8-builtins
+    flake8-coding
+    flake8-commas
+    flake8-comprehensions
+    flake8-eradicate
+    flake8-quotes
+    flake8-tidy-imports
+    pep8-naming
 skip_install = true
 
 [testenv:isort]
-deps = isort
-commands = isort -c -rc -df
+commands =
+    {envpython} -m isort -c --df taiga tests
+deps = isort>5.6,<5.7
+skip_install = true
+
+[testenv:isort_format]
+commands =
+    {envpython} -m isort taiga tests
+deps = {[testenv:isort]deps}
+skip_install = true
+
+[testenv:black]
+commands =
+    {envpython} -m black --check --diff .
+deps = black
+skip_install = true
+
+[testenv:blacken]
+commands =
+    {envpython} -m black .
+deps = {[testenv:black]deps}
 skip_install = true
 
 [testenv:docs]
+commands =
+    {envpython} -m invoke docbuild
 deps =
+    invoke
     sphinx
     sphinx-rtd-theme
-    -rrequirements-docs.txt
-changedir = docs
+    sphinx-autobuild
+    livereload~=2.6
+    -rrequirements-test.txt
+skip_install = true
+
+[testenv:towncrier]
 commands =
-    sphinx-build -W -b html -d {envtmpdir}/doctrees .  {toxinidir}/docs/_build/html
+    {envpython} -m invoke towncrier-check
+deps =
+    invoke
+skip_install = true
+
+[testenv:pypi-description]
+commands =
+    {envpython} -m invoke clean
+    {envpython} -m check_manifest
+    {envpython} -m pep517.build .
+    {envpython} -m twine check dist/*
+deps =
+    invoke
+    check-manifest
+    pep517
+    twine
+skip_install = true
+
+[testenv:release]
+commands =
+    {envpython} -m invoke clean
+    {envpython} -m check_manifest
+    {envpython} -m pep517.build .
+    {envpython} -m twine upload {posargs} dist/*
+deps = {[testenv:pypi-description]deps}
+passenv =
+    TWINE_*
+skip_install = true
+
+[flake8]
+exclude = *.egg-info,.git,.settings,.tox,build,dist,docs,requirements,tmp,*migrations*,tests,data
+ignore = E800, W503, C812, C813, C815, C818, C819, C408
+max-line-length = 119
+# flake8-quotes
+inline-quotes = double
+# flake8-coding
+no-accept-encodings = True
+# flake8-tidy-imports
+banned-modules = __future__ = this project supports python3 only
+
+[isort]
+combine_as_imports = true
+default_section = THIRDPARTY
+force_grid_wrap = 0
+include_trailing_comma = true
+known_first_party = taiga
+line_length = 119
+multi_line_output = 3
+skip = data, .tox
+use_parentheses = True
+
+[check-manifest]
+ignore =
+    .*
+    *.ini
+    *.toml
+    *.json
+    *.txt
+    *.yml
+    *.yaml
+    .tx/**
+    changes/**
+    docs/**
+    tasks.py
+    tests/**
+    debian/**
+    *.mo
+ignore-bad-ideas =
+    *.mo
+
+[pytest]
+python_files = test_*.py
+traceback = short
+addopts = --reuse-db
