Update linting tools and fix code style

--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,7 @@ commands =
     {envpython} -minterrogate -c pyproject.toml taiga tests
 deps =
     interrogate
-    flake8
+    flake8>3.9,<4.0
     flake8-broken-line
     flake8-bugbear
     flake8-builtins
@@ -42,7 +42,7 @@ skip_install = true
 [testenv:isort]
 commands =
     {envpython} -m isort -c --df taiga tests
-deps = isort>5.6,<5.7
+deps = isort>5.9,<6.0
 skip_install = true
 
 [testenv:isort_format]
