Update packaging - github actions

--- a/debian/rules
+++ b/debian/rules
@@ -2,4 +2,4 @@
 export PYBUILD_NAME=taiga
 export PYBUILD_DISABLE=test
 %:
-	dh $@ --with python2,python3 --buildsystem=pybuild
+	dh $@ --with python3 --buildsystem=pybuild
