--- a/setup.cfg
+++ b/setup.cfg
@@ -1,26 +1,3 @@
-[bumpversion]
-current_version = 0.9.2
-parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.?)(?P<release>[a-z]*)(?P<relver>\d*)
-serialize =
-    {major}.{minor}.{patch}.{release}{relver}
-    {major}.{minor}.{patch}
-commit = True
-tag = True
-sign_tags = True
-tag_name = {new_version}
-message = Release {new_version}
-
-[bumpversion:part:release]
-optional_value = gamma
-values =
-    dev
-    a
-    b
-    rc
-    gamma
-
-[bumpversion:file:taiga/__init__.py]
-
 [metadata]
 name = python-taiga
 version = attr: taiga.__version__
@@ -31,7 +8,7 @@ description = Taiga python API
 long_description = file: README.rst, HISTORY.rst
 long_description_content_type = text/x-rst
 license = MIT
-license_file = LICENSE
+license_files = LICENSE
 keywords = taiga kanban wrapper api
 classifiers =
     License :: OSI Approved :: MIT License
@@ -39,12 +16,12 @@ classifiers =
     Operating System :: OS Independent
     Development Status :: 5 - Production/Stable
     Programming Language :: Python
-    Programming Language :: Python :: 2
-    Programming Language :: Python :: 2.7
     Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.5
-    Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
 
 [options]
 include_package_data = True
@@ -54,7 +31,7 @@ install_requires =
     python-dateutil>=2.4
     pyjwkest>=1.0
 packages = taiga
-python_requires = >=3.6
+python_requires = >=3.7
 setup_requires =
 	setuptools
 zip_safe = False
@@ -67,9 +44,6 @@ taiga = *.html *.png *.gif *js *jpg *jpeg *svg *py *mo *po
 [options.extras_require]
 docs =
 	sphinx
-
-[upload]
-repository = https://upload.pypi.org/legacy/
 
 [sdist]
 formats = zip
