--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.11.x"]
-        toxenv: [ruff, isort, black, pypi-description, towncrier]
+        toxenv: [ruff, isort, black, pypi-description, docs, towncrier]
     steps:
     - uses: actions/checkout@v3
       with:
