Use pytest for tests

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ envlist =
     py{311,310,39}
 
 [testenv]
-commands = {env:COMMAND:python} setup.py test {posargs}
+commands = {env:COMMAND:python} -m pytest {posargs}
 deps =
     -r{toxinidir}/requirements-test.txt
 passenv =
@@ -105,4 +105,3 @@ ignore-bad-ideas =
 [pytest]
 python_files = test_*.py
 traceback = short
-addopts = --reuse-db
